--- a/templates/students.html
+++ b/templates/students.html
@@ -32,6 +32,10 @@
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="../static/css/quill.css">
 
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
 </head>
 
 <body style="background-color:rgb(238,238,238);padding-right:0px;padding-left:0px;">
@@ -41,58 +45,39 @@
         </div>
     </div>
     <div class="row">
-        <div class="col"><div id="dashboard"></div></div>
-    </div>
-    <div id="student_div" style="padding-right:10px;padding-left:10px;padding-top:20px;height:100vh;">
-        <div class="container student-template" style="display:none" student_uid="">
-            <div class="d-block" style="height:auto;background-color:#ffffff;padding:10px;padding-left:20px;padding-right:10px;margin-bottom:5px;">
-                <div class="d-inline-block" style="font-family:'News Cycle', sans-serif;width:75%;">
-                    <p class="student-name" style="font-size:20px;margin-bottom:5px;width:100%;">Student Name<br></p>
-                    <p class="student-perm" style="width:100%;color:rgb(132,164,197);">Authorization Level (ex. Trusted User or Requires Teacher Supervision)<br></p>
-                </div>
-                <div class="dropdown d-inline-block float-right student-options" style="width:25%;margin-top:0px;margin-right:0px;padding-left:0px;margin-left:0px;"><button class="btn btn-primary btn-sm dropdown-toggle d-inline-block float-right" data-toggle="dropdown" aria-expanded="false" type="button" style="color:rgb(33,37,41);font-family:'News Cycle', sans-serif;font-size:16px;width:80px;">Options</button>
-                    <div
-                        class="dropdown-menu dropdown-menu-right" role="menu"><a class="dropdown-item student-edit" role="presentation" href="#" style="font-family:'News Cycle', sans-serif;color:rgb(79,160,102);">Edit Permissions</a><a class="dropdown-item student-delete" role="presentation" href="#" style="color:rgb(220,20,20);font-family:'News Cycle', sans-serif;">Delete</a></div>
-            </div>
+        <div class="col">
+            <div id="dashboard"></div>
         </div>
     </div>
+
+    <div id="student_div" style="padding-right:10px;padding-left:10px;padding-top:20px;height:100vh;">
+        {% for student in students %}
+            {{ student }}
+        {% endfor %}
     </div>
+
     <div class="footer-basic" style="background-color:#439d4c;">
         <footer>
-            <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
-            <ul
-                class="list-inline"></ul>
-                <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
-        </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('../static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
+            <div class="social">
+                <a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);">
+                    <i class="icon ion-social-instagram"></i>
+                </a>
+                <a href="#" style="color:rgb(255,255,255);">
+                    <i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i>
+                </a>
+            </div>
+            <ulclass="list-inline"></ul>
+            <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
+        </footer>
 
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+        <a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('../static/img/cd-top-arrow.svg');width:40px;height:40px;">
+            Top
+        </a>
+    </div>
 
     <script src="../static/js/server_function/announcement_editor.js"></script>
     <script src="../static/js/server_function/server_bridge.js"></script>
-    <script src="../static/js/server_function/cookie_manager.js"></script>
     <script src="../static/js/init.js"></script>
-
-    <script src="../static/js/website_function/navbar.js"></script>
-    <script src="../static/js/website_function/-Countdown-BS4-.js"></script>
-    <script src="../static/js/website_function/-Fixed-Navbar-start-with-transparency-BS4-.js"></script>
-    <script src="../static/js/website_function/Bold-BS4-Animated-Back-To-Top.js"></script>
-    <script src="../static/js/website_function/Sidebar-Menu.js"></script>
-    <script src="../static/js/website_function/Profile-Edit-Form.js"></script>
-    <script src="../static/js/website_function/Smooth-Scrollto-button-read-Description.js"></script>
-    <script src="../static/js/website_function/failed_login_modal.js"></script>
-    <script src="../static/js/website_function/logout.js"></script>
-
-    <script src="../static/js/server_function/signup_form.js"></script>
-    <script src="../static/js/server_function/login_form.js"></script>
-    <script src="../static/js/server_function/dashboard.js"></script>
-    <script src="../static/js/server_function/post_announcement.js"></script>
-    <script src="../static/js/server_function/user_announcements.js"></script>
-    <script src="../static/js/server_function/confirmation_confirmed.js"></script>
-    <script src="../static/js/server_function/add_student.js"></script>
-    <script src="../static/js/server_function/review_confirmed.js"></script>
-    <script src="../static/js/server_function/students.js"></script>
 
 </body>
 
