--- a/templates/profile.html
+++ b/templates/profile.html
@@ -153,7 +153,7 @@
 
         if(grade != "")
         {
-            $("#grade_input").children().each(function()
+            grade_input.children().each(function()
             {
                 if(this.value.toString() == grade)
                 {
