--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -69,7 +69,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <div id="dashboard_div" style="padding-right:10px;padding-left:10px;height:auto;">
+            <div id="dashboard_div" style="padding-right:10px;padding-left:10px;height:1000px;">
                 <div class="container" id="dashboard_announcement_template" style="padding:0px;margin-bottom:21px;border:2px solid green;display: none;">
 
                     <div class="d-block" style="height:70px;background-color:#439d4c;padding:10px;padding-left:20px;padding-right:20px;">
@@ -99,13 +99,14 @@
         </div>
     </div>
     <div style="margin-top:24px;"></div>
-    <div class="footer-basic" style="background-color:#439d4c;position:fixed;width:100%;bottom:0">
+    <div class="footer-basic" style="background-color:#439d4c; position: relative">
         <footer>
             <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
             <ul
                 class="list-inline"></ul>
                 <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
         </footer><a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('../static/img/cd-top-arrow.svg');width:40px;height:40px;">Top</a></div>
+    <section class="d-block"></section>
 
 
 
