Fixed footers on post_announcement.html

--- a/templates/post_announcement.html
+++ b/templates/post_announcement.html
@@ -44,10 +44,12 @@
             {{ navbar }}
         </div>
     </div>
+	<div>
     <div id="template_area" style="padding-left:10px;padding-right:10px;">
         {{ announcement_form }}
     </div>
-    <div class="footer-basic" style="background-color:#439d4c;position:absolute;bottom:0;width:100%;">
+	</div>
+    <div class="footer-basic" style="background-color:#439d4c;position:relative;">
 
         <footer>
             <div class="social">
