--- a/templates/edit_announcements.html
+++ b/templates/edit_announcements.html
@@ -67,7 +67,7 @@
             <div id="empty_space_fix" style="height:280px;"></div>
         </div>
     </div>
-    <div class="footer-basic" style="background-color:#439d4c;bottom:0px;position:fixed;width:100%;">
+    <div class="footer-basic" style="background-color:#439d4c;position:relative;">
         <footer>
             <div class="social"><a href="https://www.instagram.com/pchackingsquad/" style="color:rgb(255,255,255);"><i class="icon ion-social-instagram"></i></a><a href="#" style="color:rgb(255,255,255);"><i class="icon ion-social-twitter" style="color:rgb(255,255,255);"></i></a></div>
             <ul
