Fixed post_announcement.html temporarily
--HG--
branch : release

--- a/templates/post_announcement.html
+++ b/templates/post_announcement.html
@@ -45,7 +45,7 @@
         </div>
     </div>
 	<div>
-    <div id="template_area" style="padding-left:10px;padding-right:10px;padding-bottom:40px;">
+    <div id="template_area" style="padding-left:10px;padding-right:10px;height:100vh;">
         {{ announcement_form }}
     </div>
 	</div>
