Fixed some stuff
--HG--
branch : release

--- a/templates/login.html
+++ b/templates/login.html
@@ -45,7 +45,7 @@
                             class="checkbox">
                             <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"></div>
                 </div><button class="btn btn-primary btn-block btn-lg btn-signin" type="submit" style="background-color:#439d4c;">Sign in</button></form><a class="d-block forgot-password" href="#">Forgot your password?</a><a class="d-block forgot-password"
-                    href="register.html">Don't have an account? <span style="text-decoration: underline;">Create one now!</span></a></div>
+                    href="signup.html">Don't have an account? <span style="text-decoration: underline;">Create one now!</span></a></div>
                 {{ navbar }}
     </div>
     </header>
