--- a/templates/signup.html
+++ b/templates/signup.html
@@ -41,12 +41,14 @@
                 <div class="login-card" style="font-family:'News Cycle', sans-serif;width:350px;height:569px;"><img src="../static/img/avatar_2x.png" class="profile-img-card">
                     <p class="profile-name-card"> </p>
                     <form id="signup_form" class="form-signin"><span class="reauth-email"> </span>
-                        <div id="inputs"><input class="form-control" type="email" placeholder="School Email" autofocus="" id="email"><input class="form-control" type="password" placeholder="Password" id="password"><input class="form-control" type="password" placeholder="Confirm Password"
-                                id="password_confirm"></div>
+                        <div id="inputs"><input class="form-control" type="email" placeholder="School Email" autofocus="" id="email"><input class="form-control" type="password" placeholder="Password" id="password">
+                            <input class="form-control" type="password" placeholder="Confirm Password"
+                                id="password_confirm">
+                        </div>
                         <div class="checkbox">
                             <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"></div>
                         </div><button class="btn btn-primary btn-block btn-lg btn-signin" type="submit" style="background-color:#439d4c;">Sign up</button></form><a class="d-block forgot-password" href="#">Forgot your password?</a><a class="d-block forgot-password"
-                        href="signup.html">Already Have an Acount? Sign In</a></div>
+                        href="login.html">Already Have an Account? Sign In</a></div>
                 {{ navbar }}
             </div>
         </header>
