--- a/templates/students.html
+++ b/templates/students.html
@@ -67,7 +67,7 @@
                 </a>
             </div>
             <ulclass="list-inline"></ul>
-            <p class="copyright" style="color:rgb(255,255,255);">Alphel @ 2018</p>
+            <p class="copyright" style="color:rgb(255,255,255);">Aphel @ 2018</p>
         </footer>
 
         <a href="#0" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url('../static/img/cd-top-arrow.svg');width:40px;height:40px;">
